feat:change syntaxe

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,45 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
+    <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="print.css" media="print">
-    <title>TITRE A CHANGER</title>
-</head>
+    <link rel="icon" type="image/png" href=" t.png">
 <body>
-CONTENU A CHANGER
+    <header>
+<h1>le hong-zhong cv<br></h1>
+    <p>étudiant en informatique full stack</p>
+
+    <ul>
+        <address> 19 rue emile schlumberger<br> 25000 besancon</address>
+        <a href="mail:hong-zhongle@coda-school.com">hong-zhongle@coda-school.com</a><br>
+        <a href="tel:0769866237">0769866237</a>
+    </ul>
+<img src="moi.jpg" alt="moi" width="200" height="200"/>
+
+</header>
+<section>
+    <h2>skills</h2>
+    <ul>
+        <li>c</li>
+        <li>html</li>
+    </ul>
+</section>
+<section>
+    <h2>experience</h2>
+        <h3><strong>flunch</strong></h3>
+            <p>1 an et 8 mois</p>
+</section>
+
+<section>
+    <h2>education</h2>
+        <h3>lycee victor-hugo</h3>
+            <em>2020-2023</em>
+</section>
+
+<svg>width="100" height="100">
+  <circle cx="50" cy="50" r="40" stroke="black" stroke-width="1" fill="white" />
+</svg>
+    
 </body>
-</html>
