--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="print.css" media="print">
     <link rel="icon" type="image/png" href=" t.png">
+    <meta width=device-width>
+
 <body>
     <header>
 <h1>le hong-zhong cv<br></h1>
